# snirf-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: snirfConfig.cmake.in
include/snirf/: SNIRFError.h  SNIRFFactory.h  snirf.h  snirftype.h  utils.h
src/: SNIRFFactory.cpp  snirf.cpp
tests/: CMakeLists.txt  snirf_test.cpp
